--- a/apply.html
+++ b/apply.html
@@ -18,12 +18,7 @@
 
     <div class="nav">
       <a href="index.html" target="_self">
-        <img
-          src="companyName.jpg"
-          width="130px"
-          height="70px"
-          alt="companyName"
-        />
+        <img src="English.jpg" width="130px" height="70px" alt="companyName" />
       </a>
 
       <button class="login" onClick="location.href='login.html';">
